--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^2.32.0
   firebase_auth: ^4.17.8
+  cloud_firestore: ^4.10.6
 
 dev_dependencies:
   flutter_test:
